// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slot should render a Fill containing an array 1`] = `
<div>
  <span />
  <div />
  text
</div>
`;

exports[`Slot should render a Fill containing an element 1`] = `
<div>
  <span />
</div>
`;

exports[`Slot should render a string Fill 1`] = `
<div>
  content
</div>
`;

exports[`Slot should render a string Fill with HTML wrapper when render props used 1`] = `
<div>
  <blockquote>
    content
  </blockquote>
</div>
`;

exports[`Slot should render empty Fills 1`] = `<div />`;

exports[`Slot should render empty Fills without HTML wrapper when render props used 1`] = `<div />`;
